<resources>
    <string name="app_name">Wholdus</string>
    <string name="intro_page_1">Discover huge variety of latest products directly from manufacturers</string>
    <string name="intro_page_2">We guarantee what you see is what you get delivered at your shop</string>
    <string name="intro_page_3">Get your own online store for free</string>
    <string name="start_button">START</string>
    <string name="no_orders_text">You have not placed any order with us.\n Give us a change to serve you.\n</string>
    <string name="action_bar_store_home">Go to your Store</string>
    <string name="action_bar_checkout">Proceed to Checkout</string>
    <string name="action_bar_clear">CLEAR</string>
    <string name="action_bar_skip">SKIP</string>
    <string name="action_bar_chat">Chat for help</string>
    <string name="action_bar_call">Call for help</string>
    <string name="logo_content_description">@string/intro_page_1</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_set_password">Set Password</string>
    <string name="hint_name">Your Full Name</string>
    <string name="login_fragment_header">Login</string>
    <string name="register_fragment_header">Register</string>
    <string name="submit">submit</string>
    <string name="otp_key">OTP</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="already_member">Already a member?  <u>Login</u></string>
    <string name="no_account">No account yet?  <u>Create one</u></string>
    <string name="already_registered_error">Mobile Number or Email Already Registered</string>
    <string name="verifying_credentials">Verifying Credentials&#8230;</string>
    <string name="login_progress_message">Logging you in&#8230;</string>
    <string name="invalid_credentials">Invalid Credentials! Please try again</string>
    <string name="unregistered_mobile_number">Have you registered?</string>
    <string name="empty_otp">Please enter the OTP received</string>
    <string name="token_expired">Token expired, Please register again</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="invalid_otp_error">Invalid OTP</string>
    <string name="password_reset_success">Password reset successful</string>
    <string name="next_button">Next</string>
    <string name="forgot_password_fragment_header">Forgot Password</string>
    <string name="back_button_fragment">GO BACK</string>
    <string name="request_otp">REQUEST OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_intro_text">We just need your registered mobile number to help you reset your password</string>
    <string name="rejected_title">Rejected Products</string>
    <string name="shortlist_title">Shortlisted Products</string>
    <string-array name="account_activity_fragments">
        <item>profile</item>
        <item>orders</item>
        <item>rejectedProducts</item>
        <item>editPersonalDetails</item>
    </string-array>
    <string name="onboarding_submit_button">Submit</string>
    <string name="personal_details">Personal Details</string>
    <string name="address">Address</string>
    <string name="no_address">ADD ADDRESS</string>
    <string name="add_key">ADD</string>
    <string name="business_type_title">My Business Type</string>
    <string name="save_text">SAVE</string>
    <string name="save_current_address_text">Use My Location</string>
    <string name="cancel_text">Cancel</string>
    <string name="address_alias_key">Address Nickname</string>
    <string name="buyer_interest_fragment_title">My Preferences</string>
    <string name="order_card_order_number">ORD-NO &#160;</string>
    <string name="order_card_date">Date &#160;</string>
    <string name="order_card_amount">Amount &#160;</string>
    <string name="order_card_suborder_pieces">Pieces &#160;</string>
    <string name="order_card_sellers_in_order">Sellers in Order</string>
    <string name="order_details_pieces">Pieces &#160;</string>
    <string name="order_details_products">Products &#160;</string>
    <string name="order_details_order_value">Order Value &#160;</string>
    <string name="order_details_cod_charge">COD Charge &#160;</string>
    <string name="order_details_shipping">Shipping &#160;</string>
    <string name="order_details_total_amount">Total Amount &#160;</string>
    <string name="order_details_cancel_order">Cancel Order</string>
    <string name="cancel_order_success_message">Order Successfully Cancelled</string>
    <string name="order_item_price_per_piece">Price/pc</string>
    <string name="order_item_pieces">Pieces</string>
    <string name="order_item_total">Total</string>
    <string name="order_item_status">Status</string>
    <string name="order_item_track">Track</string>
    <string name="name_key">Name</string>
    <string name="edit_key">Edit</string>
    <string name="mobile_number_key">Mobile Number</string>
    <string name="whatsapp_number_key">Whatsapp Number</string>
    <string name="company_name_key">Company Name</string>
    <string name="business_type_key">Business Type</string>
    <string name="email_key">E-mail</string>
    <string name="pincode_key">Pincode</string>
    <string name="landmark_key">Landmark</string>
    <string name="city_key">City</string>
    <string name="state_key">State</string>
    <string name="help_key">Chat</string>
    <string name="chat_key">Chat With Us</string>
    <string name="categories_key">Categories</string>
    <string name="notification_key">Updates</string>
    <string name="retry_text">Retry</string>
    <string name="api_error_message">Oops! Something went wrong</string>
    <string name="timeout_error">Unable to connect to internet</string>
    <string name="no_internet_access">No Internet Connection</string>
    <string name="new_products_message">New Products Available</string>
    <string name="show_text">SHOW</string>
    <string name="new_password">New Password</string>
    <string name="select_pieces_key">Select Pieces (Lot Size : -)</string>
    <string name="back_press_message">Press again to exit Wholdus</string>
    <string name="sort_text">SORT</string>
    <string name="filter_text">FILTER</string>
    <string name="filter_footer_title">Filter Products</string>
    <string name="max_price_key">Max Price</string>
    <string name="min_price_key">Min Price</string>
    <string name="sort_by">SORT BY</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_newest_first">Newest First</string>
    <string name="sort_price_low_to_high">Price - Low to High</string>
    <string name="sort_price_high_to_low">Price - High to Low</string>
    <string name="fabric_key">Fabric</string>
    <string name="size_key">Sizes</string>
    <string name="color_key">Colors</string>
    <string name="brand_key">Brands</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="mrp_key">MRP</string>
    <string name="lot_key">Lot Size</string>
    <string name="lot_description_key">Lot Description</string>
    <string name="out_of_stock_key">Out of Stock</string>
    <string name="value_not_provided">Not Provided</string>
    <string name="delivery_options">Delivery Options</string>
    <string name="check">Check</string>
    <string name="delivery_text">Surface delivery in 8&#8211;10 days</string>
    <string name="replacement_policy_title">Replacement Policy</string>
    <string name="replacement_policy_text">Defective products can be replaced within 3 days of delivery</string>
    <string name="more_product_details_title">More Product Details</string>
    <string name="pattern_key">Pattern</string>
    <string name="style_key">Style</string>
    <string name="work_key">Work</string>
    <string name="seller_details_title">Seller Details</string>
    <string name="location_key">Location</string>
    <string name="speciality_key">Description</string>
    <string name="view_store_key">View Store</string>
    <string name="seller_name_key">Name</string>
    <string name="more_products_from_seller">More Products From Seller</string>
    <string name="like_key">Like</string>
    <string name="dislike_key">Dislike</string>
    <string name="set_price_key">Set Price</string>
    <string name="no_products_left">Return in some time for more products</string>
    <string name="filter_no_products">No products for filter</string>
    <string name="reset_filter">CHANGE FILTERS</string>
    <string name="liked_help_title">CLICK TO LIKE</string>
    <string name="liked_help_description">Press this button\nOR\nSWIPE RIGHT\nto add product to your shortlist</string>
    <string name="disliked_help_title">CLICK TO DISLIKE</string>
    <string name="disliked_help_description">Press this button\nOR\nSWIPE LEFT\nto reject product</string>
    <string name="shortlist_help_title">VIEW SHORTLIST</string>
    <string name="shortlist_help_description">You can view your shortlist by pressing this button</string>
    <string name="filter_help_title">CLICK TO FILTER</string>
    <string name="filter_help_description">You can apply filters to products by pressing this button</string>
    <string name="cart_help_title">ADD TO CART</string>
    <string name="cart_help_description">You can add product to cart by pressing this button</string>
    <string name="lot_size_key">Lot Size &#160;</string>
    <string name="lot_details_key">Details &#160;</string>
    <string name="price_per_piece">Price/pc &#160;</string>
    <string name="pieces_key">Pieces</string>
    <string name="remarks_key">Mention Sizes, Other Remarks</string>
    <string name="total_price_key">Total</string>
    <string name="total_price_placeholder">Rs. &#160; &#160; &#160; &#160; &#160; </string>
    <string name="cart_dialog_shipping_condition">*Shipping charge extra = Rs.35/kg</string>
    <string name="cart_dialog_add_to_cart">ADD TO CART</string>
    <string name="waiting_for_otp">You will shortly receive an OTP</string>
    <string name="cart_summary_proceed">PROCEED</string>
    <string name="cart_summary_order_value">Order Value &#160;</string>
    <string name="cart_summary_shipping">Shipping &#160;</string>
    <string name="cart_summary_no_products">Your cart looks empty.\n\nWant to add products to your cart?</string>
    <string name="cart_summary_continue_shopping">Discover Products</string>
    <string name="cart_min_cart_value_message">Min cart value must be Rs.%1$d to place order!</string>
    <string name="cart_seller_min_pieces_message">Add %1$d MORE PIECES to complete minimum order quantity of seller</string>
    <string name="cart_condition_not_satified">Please complete minimum order quantity of all sellers.</string>
    <string name="cart_item_price_per_piece">Price/pc</string>
    <string name="cart_item_pieces">Pieces</string>
    <string name="cart_item_total">Total</string>
    <string name="cart_item_remarks">Remarks</string>
    <string name="cart_item_edit">Edit</string>
    <string name="checkout_confirm_address_delivery_address">Delivery Address</string>
    <string name="checkout_confirm_address_select_another">SELECT ANOTHER</string>
    <string name="select_address_key">Select Address</string>
    <string name="checkout_payment_method_cod">Cash on Delivery</string>
    <string name="checkout_payment_method_cod_description">2% COD Charge</string>
    <string name="checkout_payment_method_neft">NEFT</string>
    <string name="checkout_payment_method_credit">Credit</string>
    <string name="checkout_payment_method_credit_description">15 transactions to avail credit</string>
    <string name="price_per_pcs_format">Rs. %1$s/pc</string>
    <string name="price_format">Rs. %1$s</string>
    <string name="phone1">8800971126</string>
    <string name="phone2">8791947227</string>
    <string name="contact_us_message">Have something to say?</string>
</resources>