<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/card_margin_horizontal">

    <TextView
        style="@style/AppTheme.BoldTextLarge"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/sort_by" />

    <View
        style="@style/AppTheme.Divider"
        android:layout_width="match_parent" />

    <RadioGroup
        android:id="@+id/sort_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/newest_first"
            style="@style/AppTheme.ImportantText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/sort_newest_first" />

        <RadioButton
            android:id="@+id/price_low_to_high"
            style="@style/AppTheme.ImportantText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/sort_price_low_to_high" />

        <RadioButton
            android:id="@+id/price_high_to_low"
            style="@style/AppTheme.ImportantText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/sort_price_high_to_low" />
    </RadioGroup>

    <Button
        android:id="@+id/sort_button"
        style="@style/AppTheme.ColoredButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_text" />
</LinearLayout>