<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="@style/AppTheme.Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/wholdus_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@string/font_normal"
            android:text="@string/forgot_password_fragment_header"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_margin_horizontal"
            android:layout_marginTop="@dimen/card_margin_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/forgot_password_intro_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile_number_wrapper"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobile_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/request_otp_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_horizontal"
            android:text="@string/request_otp" />

        <include layout="@layout/layout_back_button" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_horizontal" />
    </LinearLayout>
</ScrollView>