<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        style="@style/AppTheme.DefaultCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            style="@style/AppTheme.DefaultCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/AppTheme.ImportantText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_local_shipping_black_24dp"
                android:drawableRight="@drawable/ic_local_shipping_black_24dp"
                android:gravity="center_vertical"
                android:text="@string/delivery_options" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/pincode_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/pincode_key"
                    android:inputType="number"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/check_pincode"
                    style="@style/AppTheme.ColoredButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/nonselected_dot_6dp"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:drawableStart="@drawable/nonselected_dot_6dp"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/card_margin_horizontal"
                android:text="@string/delivery_text" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</merge>