<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/AppTheme.Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo_content_description"
            android:src="@drawable/wholdus_logo" />

        <TextView
            style="@style/AppTheme.TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_fragment_header" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_wrapper"
            style="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/layout_mobile_number_input" />

        <include layout="@layout/layout_password_input" />

        <Button
            android:id="@+id/register_submit_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_horizontal"
            android:text="@string/register_fragment_header" />

        <TextView
            android:id="@+id/login_text"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/already_member"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_margin="@dimen/card_margin_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>